# RhizoAI

./: CITATION.cff  LICENSE.md  README.md  pyproject.toml  requirements_method1.txt  requirements_method2.txt  requirements_preprocess.txt  setup.py
legacy_notebooks/: OCT_RF_Classification_Method_1.ipynb  OCT_RF_Classification_Method_2.ipynb  image_similarity_tests.ipynb  preprocess_image.ipynb
src/: feature_extraction.py  method1_classifier.py  method2_classifier.py  preprocess.py  utils.py
